# ifbucksDjango

./: .gitignore  .pdm.toml  Dockerfile  README.md  db.sqlite3  env_exemplo.txt  pyproject.toml  requirements.txt  select config Dockerfile env_exemplo.txt ifbucks manage.py media pdm.lock Procfile __pypackages__ pyproject.toml README.md requirements.txt scripts uploader utils from django_migrations
config/: .settings.py.swp  settings.py  urls.py
ifbucks/: admin.py  apps.py  models.py  serializers.py  views.py
ifbucks/migrations/: 0001_initial.py  0002_alter_pedidos_options_alter_produtos_options_and_more.py  0002_imagem_pedido_foto_produto_foto_usuario_imagem.py  0002_remove_categoria_nome.py  0002_remove_usuario_usuario_usuario_nome_and_more.py  0003_categoria_nome.py  0003_pedido_rename_produtos_produto_and_more.py  0003_remove_pedido_foto_remove_produto_foto_and_more.py  0004_alter_produto_imagem.py  0004_usuario_nome.py  0005_usuario_imagem.py  0006_alter_pedido_status.py  0007_mesa_pedido_items_pedidos_tipopessoa_cargo_and_more.py  0008_rename_pedido_id_itempedido_pedido_and_more.py  0009_remove_usuario_tipopessoa_usuario_cargo_and_more.py  0010_usuario_pedido.py  0011_carrinho_remove_pedido_items_pedidos_and_more.py  0012_remove_usuario_pedido_alter_carrinho_mesa_and_more.py  0013_alter_carrinho_mesa.py
uploader/migrations/: 0001_initial.py
