[project]
name = ""
version = ""
description = ""
authors = [
    {name = "mariagerotti", email = "mariaeduarda.gerotti@gmail.com"},
]
dependencies = [
    "django>=4.2.6",
    "djangorestframework>=3.14.0",
    "Pillow>=10.0.0",
    "django-cors-headers>=4.2.0",
    "djangorestframework-simplejwt>=5.3.0",
    "setuptools>=68.2.2",
    "gunicorn>=21.2.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"
